Replace deprecated usage of Class#newInstance